--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,9 @@
         "lib/**/*.jar",
         "library/json-simple-1.1.1 2.jar"
     ]
+    "java.test.config": {
+
+        "workingDirectory": "${workspaceFolder}"
+
+    }
 }
